<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EKycExMainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="100dp">

            <Button
                android:id="@+id/createUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_user" />

            <TextView
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <Button
                android:id="@+id/selfieEnroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selfie_enroll" />

            <Button
                android:id="@+id/docScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doc_scan" />

            <Button
                android:id="@+id/userStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_status" />

            <TextView
                android:id="@+id/enrollStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/ocrStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/cardMatchingStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <Button
                android:id="@+id/selfieAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selfie_auth" />

            <Button
                android:id="@+id/selfieAuthTransparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selfie_auth_transparent" />

            <Button
                android:id="@+id/deleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_user" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>